--- a/recruitment-website/src/main/resources/templates/employee/company.html
+++ b/recruitment-website/src/main/resources/templates/employee/company.html
@@ -59,10 +59,10 @@
           </div>
         </div>
         <nav class="nav-list">
-          <a href="#" class="nav-list-link"
+          <a href="/profile" class="nav-list-link"
             ><i class="fas fa-user nav-list-icon"></i> Hồ Sơ Của Tôi</a
           >
-          <a href="#" class="nav-list-link active"
+          <a href="/company-profile" class="nav-list-link active"
             ><i class="fas fa-building nav-list-icon"></i> Công Ty Của Tôi</a
           >
           <a href="#" class="nav-list-link"
