--- a/recruitment-website/src/main/resources/templates/account/login.html
+++ b/recruitment-website/src/main/resources/templates/account/login.html
@@ -15,6 +15,7 @@
         <button class="close-btn" onclick="closeModal()">×</button>
 
         <h2 class="modal-title">Đăng nhập để tiếp tục</h2>
+
         <!-- Form Quên Mật Khẩu -->
         <form id="forgotPasswordForm" style="display: none;">
             <div class="form-group">
@@ -37,6 +38,7 @@
             <div class="divider">
                 <span>hoặc đăng nhập bằng email</span>
             </div>
+
             <div class="form-group">
                 <label class="form-label">Email <span class="required">*</span></label>
                 <input id="email" type="email" class="form-input" required>
@@ -49,7 +51,7 @@
                     <button type="button" class="password-toggle" onclick="togglePassword()">👁</button>
                 </div>
                 <div class="forgot-password">
-                    <a id="forget-pwd-btn" href="#">Quên mật khẩu?</a>
+                    <a id="forget-pwd-btn" href="/forgotPassword">Quên mật khẩu?</a>
                 </div>
             </div>
 
