--- a/recruitment-website/src/main/resources/templates/account/register.html
+++ b/recruitment-website/src/main/resources/templates/account/register.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Ký Thành Viên</title>
     <link rel="stylesheet" href="css/register.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-EvV84MR4kqVGRNSg..." crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script href="js/accounts/register.js"></script> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-EvV84MR4kqVGRNSg..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="header">
@@ -17,7 +16,7 @@
         <h2 class="form-title">Đăng Ký Thành Viên!</h2>
         
         <div class="social-buttons">
-            <button class="social-btn ">
+            <button class="social-btn">
                 <i class="fa-brands fa-facebook"></i>
                 với tài khoản Facebook
             </button>
@@ -26,23 +25,11 @@
             </button>
         </div>
 
-        <form>
+        <form id="registerForm">
             <div class="form-row">
                 <div class="form-group">
-                    <label for="firstName">Họ Tên</label>
-                    <input type="text" id="firstName" name="firstName">
-                </div>
-               
-            </div>
-
-            <div class="form-group full-width">
-                <label for="phone">Số điện thoại</label>
-                <div class="phone-group">
-                    <div class="country-code">
-                        <div class="flag"></div>
-                        +84
-                    </div>
-                    <input type="tel" id="phone" name="phone" class="phone-input">
+                    <label for="userName">Họ Tên</label>
+                    <input type="text" id="userName" name="userName">
                 </div>
             </div>
 
@@ -66,7 +53,7 @@
                 </label>
             </div>
 
-            <button type="submit" class="submit-btn">Đăng Ký</button>
+            <button type="submit" id="btnRegisterAccount" class="submit-btn">Đăng Ký</button>
 
             <div class="login-link">
                 Bạn là thành viên VietnamWorks? <a href="/login">Đăng Nhập</a>
@@ -84,24 +71,6 @@
         </form>
     </div>
 
-
-    <script type="module">
-        import { loginWithGoogle, loginWithEmailAndPwd } from '/js/firebase/firebase-auth.js';
-
-
-        document.getElementById('btnGoogleLogin').addEventListener('click', () => loginWithGoogle('Employee'));
-
-        document.getElementById('btnEmailLogin').addEventListener('click', () => {
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            if (!email || !password) {
-                alert('Vui lòng nhập đầy đủ email và mật khẩu.');
-                return;
-            }
-
-            loginWithEmailAndPwd(email, password, 'Employee');
-        });
-    </script>
+    <script type="module" src="js/accounts/register.js"></script>
 </body>
 </html>
