add button submit CV

--- a/recruitment-website/src/main/resources/templates/employee/profile.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile.html
@@ -381,7 +381,7 @@
         </form>
       </div>
     </div>
-
+    <!-- PDF Modal -->
     <div class="modal" id="pdfUploadModal" style="display: none">
       <div class="modal-content">
         <div class="modal-header">
