--- a/recruitment-website/src/main/resources/templates/employee/company.html
+++ b/recruitment-website/src/main/resources/templates/employee/company.html
@@ -15,9 +15,9 @@
       <div class="header-main">
         <div class="container">
           <div class="header-content">
-            <a class="logo" href="employee-profile">
+            <a class="logo" href="/">
               <img
-                src="https://via.placeholder.com/120x36?text=Logo"
+                src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Ctext x='10' y='35' font-family='Arial' font-size='20' fill='white'%3EVietnamWorks%3C/text%3E%3C/svg%3E"
                 alt="VietnamWorks Logo"
               />
             </a>
