--- a/recruitment-website/src/main/resources/templates/employee/profile-detail.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile-detail.html
@@ -17,6 +17,7 @@
         <div class="container">
           <div class="header-content">
             <div class="logo">
+            <a href="/">
               <img
                 src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Ctext x='10' y='35' font-family='Arial' font-size='20' fill='white'%3EVietnamWorks%3C/text%3E%3C/svg%3E"
                 alt="VietnamWorks"
