--- a/recruitment-website/src/main/resources/templates/index.html
+++ b/recruitment-website/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
             <div class="logo">
               <img
                 src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 60'%3E%3Ctext x='10' y='35' font-family='Arial' font-size='20' fill='white'%3EVietnamWorks%3C/text%3E%3C/svg%3E"
-                alt="VietnamWorks"
+                alt="VIETNAMWORKS"
               />
             </div>
 
@@ -57,7 +57,6 @@
                 <i class="fas fa-bell"></i>
               </a>
               <a id="profileSection" class="nav-item login" href="/login"></a>
-
             </nav>
           </div>
         </div>
