--- a/recruitment-website/src/main/resources/templates/employee/profile.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile.html
@@ -55,7 +55,6 @@
             <p class="profile-incomplete-text">
               Hồ sơ chưa đủ điều kiện cho phép tìm kiếm
             </p>
-            <a href="/profile" class="setup-profile-btn">Thiết Lập Hồ Sơ</a>
           </div>
         </div>
         <nav class="nav-list">
@@ -70,22 +69,14 @@
           >
         </nav>
         <div class="job-notifications">
-          <h4>Chào mừng bạn!!</h4>
-          <ul id="jobNotificationsList">
-            <!-- Job notifications will be populated by JavaScript -->
-          </ul>
+          <h4>Bạn có muốn xóa tài khoản này ?</h4>
         </div>
-        <button class="create-job-btn" id="createJobBtn">
-          Chúc bạn thành công
-        </button>
+        <button class="create-job-btn" id="deleteaccount">Xóa tài khoản</button>
       </aside>
 
       <section class="main-content">
         <div class="content-header">
           <h1>Hồ Sơ Của Tôi</h1>
-          <button class="btn-primary" id="editProfileBtn">
-            <i class="fas fa-edit"></i> Nộp Hồ Sơ
-          </button>
         </div>
 
         <div class="profile-sections">
