fix blank space in profile

--- a/recruitment-website/src/main/resources/templates/employee/profile.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile.html
@@ -109,27 +109,27 @@
               <div class="profile-details">
                 <div class="detail-row">
                   <label>Họ và tên:</label>
-                  <span id="fullName"></span>
+                  <span id="fullName">Chưa có thông tin</span>
                 </div>
                 <div class="detail-row">
                   <label>Email:</label>
-                  <span id="email"></span>
+                  <span id="email">Chưa có thông tin</span>
                 </div>
                 <div class="detail-row">
                   <label>Số điện thoại:</label>
-                  <span id="phone"></span>
+                  <span id="phone">Chưa có thông tin</span>
                 </div>
                 <div class="detail-row">
                   <label>Ngày sinh:</label>
-                  <span id="birthday"></span>
+                  <span id="birthday">Chưa có thông tin</span>
                 </div>
                 <div class="detail-row">
                   <label>Giới tính:</label>
-                  <span id="gender"></span>
+                  <span id="gender">Chưa có thông tin</span>
                 </div>
                 <div class="detail-row">
                   <label>Địa chỉ:</label>
-                  <span id="address"></span>
+                  <span id="address">Chưa có thông tin</span>
                 </div>
               </div>
             </div>
