--- a/recruitment-website/src/main/resources/templates/employee/company.html
+++ b/recruitment-website/src/main/resources/templates/employee/company.html
@@ -48,7 +48,7 @@
               alt="Profile Avatar"
             />
           </div>
-          <div class="profile-name" id="sidebarName">Vỹ Hà</div>
+          <div class="profile-name" id="sidebarName"></div>
           <div class="profile-role">CEO</div>
           <div class="profile-incomplete">
             <p class="profile-incomplete-text">Cho phép tìm kiếm hồ sơ</p>
@@ -66,6 +66,9 @@
           >
           <a href="/jobs-profile" class="nav-list-link"
             ><i class="fas fa-briefcase nav-list-icon"></i> Việc Làm Của Tôi</a
+          >
+          <a href="/application-profile" class="nav-list-link"
+            ><i class="fas fa-briefcase nav-list-icon"></i>Hồ Sơ Ứng Tuyển</a
           >
         </nav>
         <div class="job-notifications">
