--- a/recruitment-website/src/main/resources/templates/employee/profile.html
+++ b/recruitment-website/src/main/resources/templates/employee/profile.html
@@ -67,6 +67,9 @@
           <a href="/jobs-profile" class="nav-list-link"
             ><i class="fas fa-briefcase nav-list-icon"></i> Việc Làm Của Tôi</a
           >
+          <a href="/application-profile" class="nav-list-link"
+            ><i class="fas fa-briefcase nav-list-icon"></i> Hồ Sơ Ứng Tuyển</a
+          >
         </nav>
         <div class="job-notifications">
           <h4>Bạn có muốn xóa tài khoản này ?</h4>
