--- a/recruitment-website/src/main/resources/static/css/admin/employersManagement.css
+++ b/recruitment-website/src/main/resources/static/css/admin/employersManagement.css
@@ -705,3 +705,30 @@ td {
         font-size: 12px;
     }
 }
+
+.pagination-controls {
+    margin-top: 20px;
+    text-align: center;
+}
+.pagination-controls button {
+    padding: 8px 16px;
+    margin: 0 10px;
+    cursor: pointer;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+}
+.pagination-controls button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+.pagination-controls span {
+    font-size: 16px;
+    margin: 0 10px;
+}
+.status-filter {
+    padding: 8px;
+    margin-right: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
